--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "guzzlehttp/guzzle": "^7.10",
         "guzzlehttp/psr7": "^2.8",
         "league/oauth2-client": "^2.8",
+        "monolog/monolog": "^3.9",
         "mrbenosborne/json-unmarshal": "dev-fix-bug-unmarshalling-arrays",
         "php-di/slim-bridge": "^3.4",
         "slim/psr7": "^1.7",
