Ignore some errors in PHPStan
While it's not necessarily a good idea to ignore what PHPStan is
reporting, for the time being this change ignores several errors, but
does so in an easily discoverable and documented way.

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -6,3 +6,10 @@ parameters:
 	fileExtensions:
 		- php
 	reportUnmatchedIgnoredErrors: true
+	ignoreErrors:
+		-
+			identifier: method.unused
+			path: src/Application.php
+		-
+			identifier: missingType.generics
+			path: src/Application.php
