Change the application's namespace
While not strictly necessary, as the application's for a tutorial,
rather than code for a package that I'm creating, it makes sense to
change the application's namespace, making it more generic, using the de
facto "App" namespace.

--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Settermjd\\ZohoCRM\\": "src/"
+            "App\\": "src/"
         }
     },
     "autoload-dev": {
